<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">578945215575871</string>
    <string name="app_name">FullCount</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="textview">Let\'s Get This Started</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="login_button">Log In</string>
    <string name="password">Password</string>
    <string name="password_forgot1">Forgotten Password ?</string>
    <string name="password_forgot2">Send Email</string>
    <string name="facebook_connect">FB | Connect</string>
    <string name="not_a_member">Not a member?</string>
    <string name="account_name">Login</string>
    <string name="password1">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>

    <color name="logo_color">#FF1111</color>
    <color name="background">#BBBBFF</color>
    <color name="label_color">#000000</color>
    <color name="field_color">#000000</color>
    <color name="field_background">#FFFFFF</color>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="other">Other</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="city">City</string>
    <string name="team">Team</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logged_in">You are logged in</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_team_creation">TeamCreation</string>
    <string name="hello_world">Hello world!</string>

    <string name="done">Done</string>
    <string name="add_player">Add Player</string>
    <string name="team_roster">Team Roster</string>

    <string name="Done_Button">Done</string>
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="league_array">
        <item>Youth</item>
        <item>High School</item>
        <item>Amateur</item>
        <item>College</item>
        <item>Town Team</item>
        <item>Semi-Professional</item>
        <item>Professional</item>
        <item>Defunct</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_batting_roster">BattingRoster</string>
    <string name="title_activity_add_player">Add Player</string>

    <!-- Add Player Fragment Layout -->
    <string name="player_name_text_view">Player Name</string>
    <string name="name_text_input">Name</string>
    <string name="position_played_text_view">Position</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="done_button">Done</string>
    <string name="add_button">Add</string>
    <string-array name="position_array">
        <item>Pitcher</item>
        <item>Catcher</item>
        <item>First Baseman</item>
        <item>Second Baseman</item>
        <item>Third Baseman</item>
        <item>Shortstop</item>
        <item>Left Fielder</item>
        <item>Center Fielder</item>
        <item>Right Fielder</item>
    </string-array>

</resources>
