<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logged_in"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:text="@string/edit_profile"
        android:id="@+id/edit_profile_button"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:text="Create Team"
        android:id="@+id/create_team_button"
        android:layout_below="@+id/edit_profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:text="Create Score Sheet"
        android:id="@+id/create_score_sheet"
        android:layout_below="@+id/create_team_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:text="@string/log_out"
        android:id="@+id/logout_button"
        android:layout_below="@+id/create_score_sheet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
