<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false"
    android:id="@+id/Layout"
    android:background="@color/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LogoTemp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/fullcountlogotmp"
                android:adjustViewBounds="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:id="@+id/UserLabel"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/LogoTemp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/label_color" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/EmailLabel"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/UserField"
                android:layout_centerHorizontal="true"
                android:textColor="@color/label_color" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/password1"
                android:id="@+id/Password1Label"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/EmailField"
                android:layout_centerHorizontal="true"
                android:textColor="@color/label_color" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/password2"
                android:id="@+id/Password2Label"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/Password1Field"
                android:layout_centerHorizontal="true"
                android:textColor="@color/label_color" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:id="@+id/UserField"
                android:layout_below="@+id/UserLabel"
                android:layout_centerHorizontal="true"
                android:textColor="@color/field_color"
                android:background="@color/field_background"
                android:clickable="false"
                android:editable="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/EmailField"
                android:layout_below="@+id/EmailLabel"
                android:layout_centerHorizontal="true"
                android:textColor="@color/field_color"
                android:background="@color/field_background"
                android:clickable="false"
                android:editable="false"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/Password1Field"
                android:layout_below="@+id/Password1Label"
                android:layout_centerHorizontal="true"
                android:textColor="@color/field_color"
                android:background="@color/field_background"
                android:clickable="false"
                android:editable="false"
                android:focusableInTouchMode="true"
                android:focusable="true" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/Password2Field"
                android:layout_below="@+id/Password2Label"
                android:layout_centerHorizontal="true"
                android:textColor="@color/field_color"
                android:background="@color/field_background"
                android:clickable="false"
                android:editable="false"
                android:focusableInTouchMode="true"
                android:focusable="true" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/AccountCreateButton"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/Password2Field"
                android:layout_centerHorizontal="true"
                android:clickable="true" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/CancelButton"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/AccountCreateButton"
                android:layout_centerHorizontal="true"
                android:clickable="true" />
            </RelativeLayout>
    </ScrollView>
</RelativeLayout>