<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_connect"
                android:id="@+id/facebook_connect_button"
                android:layout_marginTop="49dp"
                android:layout_alignTop="@+id/login_button"
                android:layout_centerHorizontal="true" />-->

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/fullcountlogotmp"
                android:adjustViewBounds="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/login_button"/>

            <com.facebook.widget.LoginButton
                android:id="@+id/authButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authButton"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/not_a_member"
                android:id="@+id/textView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentTop="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sign_up"
                android:id="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>